[package]
name = "graph-chain-starknet"
version = "0.28.0"
edition = "2021"

[build-dependencies]
tonic-build = { version = "0.7.2", features = ["prost"] }

[dependencies]
graph = { path = "../../graph" }
graph-runtime-wasm = { path = "../../runtime/wasm" }
graph-runtime-derive = { path = "../../runtime/derive" }
prost = "0.10.4"
prost-types = "0.10.1"
serde = "1.0"
