[package]
name = "graph-chain-starknet"
version = "0.28.0"
edition = "2021"

[build-dependencies]
tonic-build = { workspace = true }

[dependencies]
graph = { path = "../../graph" }
graph-runtime-wasm = { path = "../../runtime/wasm" }
graph-runtime-derive = { path = "../../runtime/derive" }
hex = { version = "0.4.3", features = ["serde"] }
prost = { workspace = true }
prost-types = { workspace = true }
serde = "1.0"
starknet-core = { git = "https://github.com/xJonathanLEI/starknet-rs" }
